--- a/index.html
+++ b/index.html
@@ -10,61 +10,68 @@
 <body>
   <header id="header">
     <h1 id="title">Cloud Services</h1>
-    <img id="header-img" src="img/cloud.png" width="100px" height="100px" alt="company logo">
+    <img id="header-img" src="https://cdn.pixabay.com/photo/2017/06/14/01/14/storage-in-the-cloud-2400720_960_720.png" width="100px" height="100px" alt="company logo">
     <nav id="nav-bar">
       <a class="nav-link" href="#about">About</a>
       <a class="nav-link" href="#pricing">Pricing</a>
       <a class="nav-link" href="#reviews">Reviews</a>
-    </nav </header> <div id="about">
+    </nav>
+  </header>
+  <form id="form">
+    <label for="email">Sign up for our newsletter:</label>
+    <input id="email" type="email" placeholder="Enter your email address"></input>
+    <input id="submit" type="submit" value="Submit"></input>
+  </form>
+  <div id="about">
     <h2>About</h2>
     <h3>Cloud Services: your personal organization software. Any time, from any device.</h3>
     <p>Documents, Backups, Calendar, Meetings, Chat. Cloud Services provides modern infrastructure for small businesses and freelancers around the world.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/B-Kv3WuQlo8" frameborder="0" allowfullscreen></iframe>
+    <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/B-Kv3WuQlo8" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div id="pricing">
+    <h2>Pricing</h2>
+    <div class="pricing">
+      <h3>Basic</h3>
+      <ul>
+        <li>Documents</li>
+        <li>Calendar</li>
+      </ul>
     </div>
-    <div id="pricing">
-      <h2>Pricing</h2>
-      <div class="pricing">
-        <h3>Basic</h3>
-        <ul>
-          <li>Documents</li>
-          <li>Calendar</li>
-        </ul>
-      </div>
-      <div class="pricing">
-        <h3>Professional</h3>
-        <ul>
-          <li>Documents</li>
-          <li>Calendar</li>
-          <li>Backups</li>
-        </ul>
-      </div>
-      <div class="pricing">
-        <h3>Premium</h3>
-        <ul>
-          <li>Documents</li>
-          <li>Calendar</li>
-          <li>Backups</li>
-          <li>Chat</li>
-          <li>Meetings</li>
-        </ul>
-      </div>
+    <div class="pricing">
+      <h3>Professional</h3>
+      <ul>
+        <li>Documents</li>
+        <li>Calendar</li>
+        <li>Backups</li>
+      </ul>
     </div>
-
-    <div id="reviews">
-      <h2>Reviews</h2>
-      <div class="review">
-        <h3>Money well spent.</h3>
-        <p>No frills, exactly what we need for our employees.</p>
-      </div>
-      <div class="review">
-        <h3>Freelancer's dream</h3>
-        <p>A full suite of apps for much cheaper than the competitors.</p>
-      </div>
-      <div class="review">
-        <h3>Great support</h3>
-        <p>Answered my questions right away and even introduced a new feature that we requested.</p>
-      </div>
+    <div class="pricing">
+      <h3>Premium</h3>
+      <ul>
+        <li>Documents</li>
+        <li>Calendar</li>
+        <li>Backups</li>
+        <li>Chat</li>
+        <li>Meetings</li>
+      </ul>
     </div>
+  </div>
+
+  <div id="reviews">
+    <h2>Reviews</h2>
+    <div class="review">
+      <h3>Money well spent.</h3>
+      <p>No frills, exactly what we need for our employees.</p>
+    </div>
+    <div class="review">
+      <h3>Freelancer's dream</h3>
+      <p>A full suite of apps for much cheaper than the competitors.</p>
+    </div>
+    <div class="review">
+      <h3>Great support</h3>
+      <p>Answered my questions right away and even introduced a new feature that we requested.</p>
+    </div>
+  </div>
 
 
 
@@ -72,8 +79,8 @@
 
 
 
-    <!-- FCC Test Script -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- FCC Test Script -->
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
