Adding form action url

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <a class="nav-link" href="#reviews">Reviews</a>
     </nav>
   </header>
-  <form id="form">
+  <form id="form" action="https://www.freecodecamp.com/email-submit">
     <label for="email">Sign up for our newsletter:</label>
-    <input id="email" type="email" placeholder="Enter your email address"></input>
+    <input id="email" type="email" name="email" placeholder="Enter your email address"></input>
     <input id="submit" type="submit" value="Submit"></input>
   </form>
   <div id="about">
